src/test/ui/borrowck/borrowck-escaping-closure-error-1.stderr
error[E0373]: closure may outlive the current function, but it borrows `books`, which is owned by the current function
  --> $DIR/borrowck-escaping-closure-error-1.rs:23:11
   |
23 |     spawn(|| books.push(4));
   |           ^^ ----- `books` is borrowed here
   |           |
   |           may outlive borrowed value `books`
help: to force the closure to take ownership of `books` (and any other referenced variables), use the `move` keyword
   |
23 |     spawn(move || books.push(4));
   |           ^^^^^^^

error: aborting due to previous error

